--- a/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
+++ b/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
@@ -51,7 +51,7 @@
 
   /* Inputs */
  --theme-input-text-border: #767676;
- --theme-input-text-border-active: #6BA53A;
+ --theme-input-text-border-active: #007276;
 
   /* Dimensions */
  --theme-header-height: 144px;
