--- a/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
@@ -31,7 +31,7 @@
                             <a class="fa fa-info-circle" (click)="handleGetInfo(product, $event)" title="See details">Get Info</a>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
-                            <a class="fa fa-trash-o" (click)="handleDelete(product, $event)" title="Delete">Delete</a>
+                            <a class="fa fa-trash-alt" (click)="handleDelete(product, $event)" title="Delete">Delete</a>
                         </li>
                     </ul>             
                 </div>
