--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -9,7 +9,7 @@
             <form class="submit-form" style="background: white;">
 
                 <!-- IF at Site level -->
-                <div class="row" *ngIf="admin && !current">
+                <div class="row" *ngIf="!current">
                     <div class="col-md-6">
                         <h3>UAS Sites</h3>
                     </div>
