removed stand alone uploader reference

--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -24,9 +24,9 @@
             <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/tasks" routerLinkActive="active">Workflow Tasks</a>
             </li>
-            <li role="menuitem">
+            <!-- <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/upload" routerLinkActive="active">Collection Upload</a>
-            </li>
+            </li> -->
             <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/viewer" routerLinkActive="active">Site Viewer</a>
             </li>
