--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -1,5 +1,5 @@
-<div class="modal-body">
-  <div  style="height: 500px">
+<div class="modal-body" style="padding-bottom: 0;">
+  <div >
   <div *ngIf="message != null" class="error-container">
     <div class="label-holder">
       <strong>Error</strong>
@@ -40,35 +40,36 @@
 
     <div class="row">
       <div class="col-md-12">
-        <label>Pilot Name:</label>{{product.pilotName}} 
+        <label>Pilot Name: </label> &nbsp; {{product.pilotName}} 
       </div>
     </div>
     
     <div class="row">
       <div class="col-md-12">
-        <label>Date/Time:</label>{{product.dateTime}} 
+        <label>Date/Time: </label> &nbsp; {{product.dateTime}} 
       </div>
     </div>
     
     <div class="row">
       <div class="col-md-12">
-        <label>Sensor Information:</label>{{product.sensor}} 
+        <label>Sensor Information:</label> &nbsp; {{product.sensor}} 
       </div>
     </div>
     
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-md-12">
         <label>Raw Images</label> 
       </div>
-    </div>
-    <div class="row">
+    </div> -->
+    <div class="row" style="background-color: #ececec;">
       <div class="col-md-12">
         <div id="image-list-container">
+          <h3>Raw Images</h3> 
           <ul class="list-group row">
-            <li *ngFor="let item of product.documents" class="list-group-item col-xs-3">
+            <li *ngFor="let item of product.documents" class="list-group-item col-xs-3" style="background:none;">
               <div class="" *ngIf="thumbnails[item.id] != null">
                 <a class="thumbnail">
-                  <img class="" [src]="thumbnails[item.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
+                  <img [src]="thumbnails[item.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
                   <div class="caption">
                     <h4 class="media-heading">{{item.name}}</h4>
                   </div>
@@ -80,14 +81,13 @@
       </div>    
     </div>
     
-    <div class="btn-holder" style="text-align: right;">
-      <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-      <button (click)="handleGoto()" class="btn btn-primary pull-right" style="margin-left: 5px;">
-        Collection Details
-      </button>    
-    </div>
-    
-    <div class="row">
+    <div class="row" style="background-color: #ececec;">
+      <div class="btn-holder" style="text-align: right;margin:20px 20px 20px 20px;">
+        <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+        <button (click)="handleGoto()" class="btn btn-primary" style="margin-left: 5px;">
+          Collection Details
+        </button>    
+      </div>
     </div>
   </div>
   </div>
