Fixed pencil and trash icons not appearing

--- a/uasdm-web/src/main/ng2/src/app/admin/component/logo/system-logos.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/logo/system-logos.component.html
@@ -26,8 +26,8 @@
         <tr *ngFor="let icon of icons" class="fade-ngRepeat-item">
           <td class="button-column">
             <span>
-              <a class="fa fa-pencil ico-edit" (click)="edit(icon)" [title]="'system.image.editTooltip' | localize"></a>
-              <a *ngIf="icon.custom" class="fa fa-trash-o ico-remove" [title]="'system.image.removeTooltip' | localize"
+              <a class="fa fa-pencil-alt ico-edit" (click)="edit(icon)" [title]="'system.image.editTooltip' | localize"></a>
+              <a *ngIf="icon.custom" class="fa fa-trash-alt ico-remove" [title]="'system.image.removeTooltip' | localize"
                  (click)="onClickRemove(icon, $event)"></a>
             </span>
           </td>
