--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/accounts.component.html
@@ -41,9 +41,9 @@
                         <tr *ngFor="let account of res.resultSet | paginate: { itemsPerPage: 10, currentPage: p, totalItems: res.count }"
                             class="fade-ngRepeat-item">
                             <td class="button-column">
-                                <a class="fa fa-pencil ico-edit" (click)="edit(account, $event)"
+                                <a class="fa fa-pencil-alt ico-edit" (click)="edit(account, $event)"
                                     [title]="'account.editTooltip' | localize"></a>
-                                <a class="fa fa-trash-o ico-remove" [title]="'account.removeTooltip' | localize"
+                                <a class="fa fa-trash-alt ico-remove" [title]="'account.removeTooltip' | localize"
                                     (click)="handleDelete(account, $event)"></a>
                             </td>
                             <td class="label-column username-col"> {{ account.username }} </td>
