--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -29,7 +29,7 @@
     </div>
   
     <div class="row">
-      <tabset>
+      <tabset class="nav-full-width">
         <tab *ngFor="let folder of folders" [heading]="folder.name" (select)="onSelect(folder)">
           <div>
             <div id="image-list-container">
