--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -77,7 +77,7 @@
         <div *ngIf="page.selection.isNew" class="form-group">
           <div class="row">
             <div class="col-md-8">
-              <input [(ngModel)]="page.selection.label" name="label" type="input" class="form-control" [placeholder]="'Add New ' + page.selection.type" required />
+              <input autofocus [(ngModel)]="page.selection.label" name="label" type="input" class="form-control" [placeholder]="page.selection.type + ' name...'" required />
             </div>
             <div class="col-md-2">
               <button type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(false, $event)">
@@ -87,7 +87,7 @@
          </div>    
          <div class="row" *ngIf="hasField('platform')">
            <div class="col-md-8">
-             <label for="platform">Platform:</label>
+             <label for="platform" style="margin-top: 10px;">Platform:</label>
              <select [(ngModel)]="page.selection.platform" name="platform" type="input" required>                               
                <option></option>
                <option *ngFor="let platform of platforms" [value]="platform.oid">{{platform.displayLabel}}</option>
@@ -96,7 +96,7 @@
          </div>    
          <div class="row" *ngIf="hasField('sensor')">
            <div class="col-md-8">
-             <label for="sensor">Sensor:</label>
+             <label for="sensor" style="margin-top: 10px;">Sensor:</label>
              <select [(ngModel)]="page.selection.sensor" name="sensor" type="input" required>                               
                <option></option>
                <option *ngFor="let sensor of sensors" [value]="sensor.oid">{{sensor.displayLabel}}</option>
