--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -52,7 +52,7 @@
             <div class="row" style="height: calc(100vh - 228px);">
                 <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
                   
-                  <tabset>
+                  <tabset class="nav-full-width">
                     <tab heading="Data">                
                       <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container">
                         <div class="list-group">
@@ -86,7 +86,7 @@
                                   <img src="https://via.placeholder.com/75x75" class="img-responsive">
                                 </div>
                                 <div class="card-right">
-                                  <h4>
+                                  <h4 style="word-break: break-all;">
                                     <!-- <a (click)="select(node, $event)"> -->
                                       {{node.name}}
                                     <!-- </a> -->
@@ -107,7 +107,7 @@
                               <div class="card-body">
                                   <i (click)="handleExpand(node, $event)" class="fa fa-caret-down pull-right" aria-hidden="true"></i>
 
-                                  <h4>{{node.name}}</h4>
+                                  <h4 style="word-break: break-all;">{{node.name}}</h4>
                                   <p><b>{{node.numberOfChildren}}</b> {{getMetadata(node).childLabel}}</p>
                                   
                                   <div *ngIf="node.active" class="list-group" >
@@ -129,7 +129,7 @@
                           <div *ngFor="let node of supportingData" class="list-group-item">
                           <div class="card card-default">
                               <div class="card-body">
-                                <h4>Supporting Data</h4>
+                                <h4 style="word-break: break-all;">Supporting Data</h4>
                                 <div class="list-group">
                                   <div class="list-group-item" style="background-color: #ececec;border: solid 1px lightgrey;border-radius: 0;">
                                     <a (click)="select(node, null, $event)">
