https://terraframe.atlassian.net/browse/OU-236

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -118,8 +118,8 @@
         </div>
 
         <div class="form-group">
-          <label for="outFileName">Output File Name Prefix:</label>
-          <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control" placeholder="Output file name prefix..." />
+          <label for="outFileName">Output Product Name Prefix</label>
+          <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control" placeholder="Output product name prefix..." />
         </div>
       </div>
     </div>
