https://terraframe.atlassian.net/browse/OU-243

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
@@ -34,7 +34,7 @@
           </textarea>
         </div>
         <div *ngIf="attribute.type === 'point'">          
-          <map-attribute [(site)]="entity" ></map-attribute>
+          <map-attribute [(site)]="entity" [center]="center" [zoom]="zoom" ></map-attribute>
         </div>
       </div>
     </div>
