--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="" *ngIf="thumbnails[product.id] != null">
-          <a class="thumbnail">
+          <a class="thumbnail non-clickable">
             <img class="" [src]="thumbnails[product.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
           </a>
         </div>
@@ -68,7 +68,7 @@
           <ul class="list-group row">
             <li *ngFor="let item of product.documents" class="list-group-item col-xs-3" style="background:none;">
               <div class="" *ngIf="thumbnails[item.id] != null">
-                <a class="thumbnail">
+                <a class="thumbnail non-clickable">
                   <img [src]="thumbnails[item.id] | safeHtml" (error)="getDefaultImgURL($event)" alt="Image">
                   <div class="caption">
                     <h4 class="media-heading">{{item.name}}</h4>
