--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -5,56 +5,64 @@
 <div id="app-container" class="container-fluid" style="background: #f7f7f7;">
 
     <div class="row">
-        <div class="col-md-3 lw-inner-col" id="location-explorer-list" style="overflow: visible;">
-            <form class="submit-form" style="background: white;">
-
-                <!-- IF at Site level -->
-                <div class="row" *ngIf="!current">
+        <div class="col-md-3 lw-inner-col">
+            <div class="row">
+              <div class="col-md-12">
+                <form class="submit-form" style="background: white;">
+            
+                  <!-- IF at Site level -->
+                  <div class="row" *ngIf="!current">
                     <div class="col-md-6">
-                        <h3>UAS Sites</h3>
+                      <h3>UAS Sites</h3>
                     </div>
                     <div class="col-md-6">
-                        <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Add new site</button>
-                        <!-- 
-                        <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
-                        -->
+                      <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Add new site</button>
+                      <!-- 
+                                                <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
+                                                -->
                     </div>
-                </div>
-
-                <!-- IF lower than Site -->
-                <div class="row" *ngIf="current">
-                    <div class="col-md-12" >
-                      <ul class="breadcrumb" style="background-color: white;">
-                          <li>
-                            <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
-                            <a (click)="back(null)" style="color: #007276;">UAS Sites</a>
-                          </li>
-                          <li *ngFor="let entity of breadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
-                            <a *ngIf="!isLast" (click)="back(entity)" style="color: #007276;"> {{entity.name}}</a>
-                            <span *ngIf="isLast"> <b>{{entity.name}}</b> </span>
-                          </li>
-                      </ul>                    
-                    </div>
-                </div>
-
-                <!-- Search bar -->
-                <div class="row">
+                  </div>
+            
+                  <!-- IF lower than Site -->
+                  <div class="row" *ngIf="current">
                     <div class="col-md-12">
-                        <div class="location-management-widget-section">
-                            <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
-                        </div>
+                      <ul class="breadcrumb" style="background-color: white;">
+                        <li>
+                          <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
+                          <a (click)="back(null)" style="color: #007276;">UAS Sites</a>
+                        </li>
+                        <li *ngFor="let entity of breadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
+                          <a *ngIf="!isLast" (click)="back(entity)" style="color: #007276;"> {{entity.name}}</a>
+                          <span *ngIf="isLast"> <b>{{entity.name}}</b> </span>
+                        </li>
+                      </ul>
                     </div>
-                </div>                
-            </form>
+                  </div>
+            
+                  <!-- Search bar -->
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="location-management-widget-section">
+                        <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search"
+                          [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)"
+                          [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
+                          [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
 
             <!-- <hr> -->
 
-            <div class="row" style="height: calc(100vh - 228px);">
+            <div class="row">
                 <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
                   
                   <tabset class="nav-full-width">
                     <tab heading="Data">                
-                      <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container">
+                      <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container"
+                      style="height: calc(100vh - 230px);overflow-y: auto;">
                         <div class="list-group">
 
                           <div *ngFor="let node of nodes" class="list-group-item">
