--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -5,7 +5,7 @@
 <div id="app-container" class="container-fluid" style="background: #f7f7f7;">
 
     <div class="row">
-        <div class="col-md-3 lw-inner-col">
+        <div id="navigator-left-sidebar" class="col-md-3 lw-inner-col">
             <div class="row">
               <div class="col-md-12">
                 <form class="submit-form" style="background: white;">
@@ -92,7 +92,7 @@
                               <div class="card-body card-5-7" style="border-left: solid 15px;">
                                 <div class="card-left">
                                   <!-- <img src="https://via.placeholder.com/75x75" class="img-responsive"> -->
-                                  <i class="fas fa-map-marker-alt" style="font-size: 50px;"></i>
+                                   <i class="fas fa-map-marker-alt" style="font-size: 50px;"></i>
                                 </div>
                                 <div class="card-right">
                                   <h4 style="word-break: break-all;">
