--- a/uasdm-web/src/main/ng2/src/app/site/component/map-attribute/map-attribute.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/map-attribute/map-attribute.component.html
@@ -1,7 +1,13 @@
 <div class="row-holder">
     <div class="label-holder"></div>
     <div class="holder">
-    <div class="modal-body text-left">
+    <div class="modal-body">
+      <div id="search-container" style="position: absolute;z-index: 999;padding: 15px;width: 35%;">
+        <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search"
+                          [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)"
+                          [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
+                          [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+      </div>
 		  <div id="map-attribute-div" class="map-view-port" style="height:300px;"></div>
     </div>
   </div>
@@ -22,3 +28,19 @@
     </div>
   </div>
 </div>
+
+<ng-template #bsItemTemplate let-match="match" let-query="query">
+  <span *ngIf="match.item.filename == null">
+    <i class="fa fa-folder-open"></i>
+  </span>
+  <span *ngIf="match.item.filename != null">
+    <i class="fa fa-file"></i>
+  </span>
+  <span>
+    <span *ngFor="let site of match.item.hierarchy; index as i">
+        {{site.label}} /
+        <!-- <span *ngIf="i < (match.item.hierarchy.length -1)">/</span> -->
+    </span>
+  </span>
+  <b>{{ match.item.label}}</b>
+</ng-template>
