--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -62,7 +62,7 @@
 
       <div class="btn-holder" style="text-align: right;margin: 20px 20px 10px 20px;">
         <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-        <button *ngIf="processable && enableSelectableImages" type="button" class="btn btn-secondary" (click)="handleDownload()" style="margin-left: 5px;">Download all</button>
+        <button *ngIf="processable" type="button" class="btn btn-secondary" (click)="handleDownload()" style="margin-left: 5px;">Download all</button>
         <button *ngIf="processable && enableSelectableImages" [disabled]="processRunning" (click)="handleRunOrtho()" class="btn btn-primary" style="margin-left: 5px;">
           Reprocess imagery
           <i class="fa fa-sync-alt" [ngClass]="{'fa-spin' : processRunning}" aria-hidden="true" style="color:white;vertical-align: middle;margin-left: 10px;"></i>
