--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -66,25 +66,6 @@
                         <div class="list-group">
 
                           <div *ngFor="let node of nodes" class="list-group-item">
-                            <!-- <a (click)="select(node, $event)">
-                              {{node.name}}
-                            </a>
-                            <span *ngIf="node.type !== 'folder'" class="pull-right button-column">
-                              <a class="fa fa-pencil-alt ico-edit" (click)="handleEdit(node)" title="Edit"></a>
-                              <a class="fa fa-trash-alt ico-remove" (click)="handleDelete(node)" title="Delete"></a>                                   
-                            </span>                                 
-                            <div *ngIf="node.active" class="list-group">
-                              <div  *ngFor="let child of node.children" class="list-group-item">
-                                <a (click)="select(child, $event)">
-                                  {{child.name}}
-                                </a>
-                                <span *ngIf="child.type !== 'folder'" class="pull-right button-column">
-                                  <a class="fa fa-pencil-alt ico-edit" (click)="handleEdit(child)" title="Edit"></a>
-                                  <a class="fa fa-trash-alt ico-remove" (click)="handleDelete(child)" title="Delete"></a>                                   
-                                </span>                                 
-                              </div>
-                            </div> -->
-
 
                             <!-- Two column layout -->
                             <div class="card card-default clickable" *ngIf="getMetadata(node).root" (click)="select(node, null, $event)">
@@ -114,7 +95,7 @@
                             <!-- Single column card -->
                             <div class="card card-default clickable" *ngIf="!getMetadata(node).root" (click)="select(node, null, $event)">
                               <div class="card-body">
-                                  <i (click)="handleExpand(node, $event)" class="fa fa-caret-down pull-right" aria-hidden="true"></i>
+                                  <i (click)="handleExpand(node, $event)" class="fa fa-caret-left expand-arrow-ico pull-right" [ngClass]="{'fa-rotate-270':node.active}" style="font-size: 20px;" aria-hidden="true"></i>
 
                                   <h4 style="word-break: break-all;">{{node.name}}</h4>
                                   <p><b>{{node.numberOfChildren}}</b> {{getMetadata(node).childLabel}}</p>
